--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ body {
 }
 
 .top {
-    /* background-image: url(/images/screen.jpg); */
     height: 100vh;
     position: relative;
 }
@@ -97,6 +96,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    display: block;
 }
 
 .top__inner {
