--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ body {
 }
 
 .top {
-    height: 100vh;
     position: relative;
 }
 .video-bg {
@@ -105,7 +104,8 @@ body {
     color: #fff;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
+    box-sizing: border-box;
 
 }
 .top__content {
@@ -137,7 +137,7 @@ body {
 .top__info {
     display: flex;
     margin-top: auto;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .top__info-list {
